package semester3.lab2;

public interface SentencePart {
    /**
     * Check if this object is a Word
     */
    public boolean isWord();
    /**
     * Documentation-purposes only.
     * Sensible implementation is required!
     */
    public String toString();
}
